--- a/kebu/pubspec.yaml
+++ b/kebu/pubspec.yaml
@@ -36,7 +36,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   flutter_screenutil: ^5.9.3
-  flutter_native_splash: ^2.4.3
+  random_avatar: ^0.0.8
+  flutter_native_splash: ^2.4.4
 
 dev_dependencies:
   flutter_test:
@@ -90,3 +91,10 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+
+flutter_native_splash:
+  color: "#FFA016"
+  image: lib/assets/splash.png
+  android_12:
+    color: "#FFA016"
+    image: lib/assets/splash.png
